--- a/samurai_code/.vscode/launch.json
+++ b/samurai_code/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "c:/Users/Active/Desktop/Coding/dirC/Upntu Shell",
-      "program": "c:/Users/Active/Desktop/Coding/dirC/Upntu Shell/build/Debug/outDebug",
+      "cwd": "c:/Users/Active/Desktop/Coding/dirC/0x16. C - Simple Shell/simple_shell/SHELL",
+      "program": "c:/Users/Active/Desktop/Coding/dirC/0x16. C - Simple Shell/simple_shell/SHELL/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
