--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "string.h": "c",
     "main.h": "c",
     "unistd.h": "c",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "stdio.h": "c"
   },
   "C_Cpp.errorSquiggles": "disabled",
   "cSpell.words": [
